vector clock class is added

--- a/pin/makefile
+++ b/pin/makefile
@@ -111,7 +111,9 @@ MCS_OBJS = MultiCacheSim-dist/CacheCore.o \
 		   MultiCacheSim-dist/Snippets.o
 
 MY_OBJS = $(OBJDIR)MultiCacheSim_PinDriver.o\
-		  $(OBJDIR)Bloom.o
+		  $(OBJDIR)Bloom.o\
+		  $(OBJDIR)PthreadInstumentation.o\
+		  $(OBJDIR)VectorClock.o
 
 $(TOOLS): %$(PINTOOL_SUFFIX) : %.o $(MY_OBJS)
 	${PIN_LD} $(PIN_LDFLAGS) $(LINK_DEBUG) $(MCS_OBJS) ${LINK_OUT}$@ $^ ${PIN_LPATHS} $(PIN_LIBS) $(DBG) -lrt
@@ -119,4 +121,5 @@ $(TOOLS): %$(PINTOOL_SUFFIX) : %.o $(MY_OBJS)
 
 ## cleaning
 clean:
-	-rm -rf $(OBJDIR) *.out *.tested *.failed makefile.copy
+	rm -rf $(OBJDIR) *.out *.tested *.failed makefile.copy
+	make -C MultiCacheSim-dist/ clean
