started adding create order
currently pthread_create functions look replaced but they are not
called, what am I missing here?

--- a/pin/.settings/org.eclipse.cdt.core.prefs
+++ b/pin/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+environment/project/cdt.managedbuild.toolchain.gnu.base.1631229365/PIN_HOME/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.1631229365/PIN_HOME/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.base.1631229365/PIN_HOME/value=/home/gokhan/Applications/pin-2.12-55942-gcc.4.4.7-linux
+environment/project/cdt.managedbuild.toolchain.gnu.base.1631229365/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.1631229365/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.618136953/PIN_HOME/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.base.618136953/PIN_HOME/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.base.618136953/PIN_HOME/value=/home/gokhan/Applications/pin-2.12-55942-gcc.4.4.7-linux
