EPERM problem solved.

--- a/pin/makefile
+++ b/pin/makefile
@@ -124,3 +124,6 @@ $(TOOLS): %$(PINTOOL_SUFFIX) : %.o $(MY_OBJS)
 clean:
 	rm -rf $(OBJDIR) *.out *.tested *.failed makefile.copy
 	make -C MultiCacheSim-dist/ clean
+
+ccc: clean
+	rm -f thread_epochs.* create.txt
